--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,24 +1,24 @@
 <main class="wrapper">
-  {{!-- <div class="promo-section">
+   {{!-- <div class="promo-section">
      {{>promo}}
   </div> --}}
- 
-  <div class="main-section">
-     {{>book}}
-  </div>
-  {{!-- <p>Places to stay around Canada</p> --}}
-  {{!-- {{>promorooms}} --}}
-  <div class="room">
-    
-{{#each indexRooms }}
-<ul class="room-info zoom">
-   <li><img src={{this.roomImg}}></li>
-   <li class="top-room-info">
-      <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
-   </li>
-   <li><label>{{this.description}}</label></li>
-   <li><label>${{this.price}} CAD / night</label></li>
-</ul>
-{{/each}}
-</div>
-</main> 
+   <div class="main-section">
+      {{>promo}}
+      {{>book}}
+   </div>
+   
+   {{!-- <p>Places to stay around Canada</p> --}}
+   {{!-- {{>promorooms}} --}}
+   <div class="room">
+      {{#each indexRooms }}
+      <ul class="room-info zoom">
+         <li><img src={{this.roomImg}}></li>
+         <li class="top-room-info">
+            <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
+         </li>
+         <li><label>{{this.description}}</label></li>
+         <li><label>${{this.price}} CAD / night</label></li>
+      </ul>
+      {{/each}}
+   </div>
+</main>
