--- a/views/partials/book.hbs
+++ b/views/partials/book.hbs
@@ -3,7 +3,7 @@
   <form action="">
     <fieldset>
       <legend for="where"> &nbsp WHERE &nbsp</legend>
-      <input type="search" name="find" id="where" placeholder="Anywhere">
+      <input type="search" name="find" id="where" placeholder="Anywhere" >
     </fieldset>
     <div class="in-out">
       <fieldset>
@@ -12,7 +12,7 @@
       </fieldset>
       <fieldset>
         <legend for="checkout"> &nbsp CHECKOUT &nbsp</legend>
-        <input type="date" name="checkOut" id="checkOut">
+        <input type="date" name="checkOut" id="checkOut" required pattern="\d{2}-\d{2}-\d{4}" >
       </fieldset>
     </div>
     <fieldset>
