--- a/public/css/room.css
+++ b/public/css/room.css
@@ -1,3 +1,21 @@
+h1{
+  padding: 0.5rem;
+  text-align: left;
+}
+
+h2{
+  margin-left: 1rem;
+  padding: 0.5rem;
+  text-align: left;
+}
+
+h3{
+  margin: 0;
+  font-weight: bold;
+  color: var(--dark);
+  text-align: left;
+}
+
 .room{
   display: grid;
   padding: 0 0.5rem;
