--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- Material design icons are use below. Remove this line if using other font packs or images. Details on Material Design icons can be found here: https://material.io/resources/icons/ -->
   <!-- <script src="https://kit.fontawesome.com/91d2257466.js" crossorigin="anonymous"></script> -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
-   <!-- You may change this "Reset" to "Normalize" if preferred -->
+  <!-- You may change this "Reset" to "Normalize" if preferred -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slider.css">
   <link rel="stylesheet" href="css/signup-login.css">
+  <link rel="stylesheet" href="css/promo.css">
   <link rel="stylesheet" href="css/book.css">
   <link rel="stylesheet" href="css/room.css">
   <link rel="stylesheet" href="css/index.css">
