--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
    
    {{!-- <p>Places to stay around Canada</p> --}}
    {{!-- {{>promorooms}} --}}
-   <div class="room">
+   <div class="room" id="promo">
       {{#each indexRooms }}
       <ul class="room-info zoom">
          <li><img src={{this.roomImg}}></li>
