--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,7 +2,8 @@
 <header>
   <ul class="header-logo" >
     <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
-    <li>{{>slider}}</li>
+    <li class="slider">{{>slider}}</li>
+    {{!-- <div style="background-image: url(/img/sliders/slider01.jpg)"></div> --}}
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
     <li class="signin"><a href="/signup" title="Sign In"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
