--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -1,63 +1,91 @@
+#cssSlider {
+  width: 100%;
+	/* height: 300px; */
+	overflow: hidden;
+	/* border: 10px solid #666; */
+}
 
-.slider-holder
- {
- width: 100%;
- /* height: 400px; */
- background-color: yellow;
- margin-left: auto;
- margin-right: auto;
- margin-top: 0px;
- text-align: center;
- overflow: hidden;
- }
- 
- .image-holder
- {
- width: 100%;
- background-color: red;
- /* height: 400px; */
- clear: both;
- position: relative;
- -webkit-transition: left 2s;
- -moz-transition: left 2s;
- -o-transition: left 2s;
- transition: left 2s;
- }
- 
- .slider-image
- {
- float: left;
- margin: 0px;
- padding: 0px;
- position: relative;
- }
- 
- #slider-image-1:target ~ .image-holder
- {
- left: 0px;
- }
- 
- #slider-image-2:target ~ .image-holder
- {
- left: -800px;
- }
- 
- #slider-image-3:target ~ .image-holder
- {
- left: -1600px;
- }
- 
- .button-holder
- {
- position: relative;
- top: -20px;
- }
- 
- .slider-change
- {
- display: inline-block;
- height: 10px;
- width: 10px;
- border-radius: 5px;
- background-color: brown;
- }
+#sliderImages {
+	width : 4000px;
+	height: 200px;
+	overflow: hidden;
+	
+	/* animation duration: 16s : 5x ~3s display image + 5x ~0.2s slide */
+	animation: slide 16s infinite;
+	-moz-animation: slide 16s infinite;
+	-webkit-animation: slide 16s infinite;
+	-o-animation: slide 16s infinite;
+}
+
+#sliderImages img {
+	float: left;
+}
+
+@keyframes slide{
+	0%{margin-left: 0px;}
+	17%{margin-left: 0px;}
+	/* 20%{margin-left: -800px;}
+	37%{margin-left: -800px;} */
+	40%{margin-left: -1600px;}
+	57%{margin-left: -1600px;}
+	/* 60%{margin-left: -2400px;}
+	77%{margin-left: -2400px;}
+	80%{margin-left: -3200px;}
+	97%{margin-left: -3200px;} */
+	100%{margin-left: 0px;}
+}
+
+@-moz-keyframes slide{
+	0%{margin-left: 0px;}
+	17%{margin-left: 0px;}
+	/* 20%{margin-left: -800px;}
+	37%{margin-left: -800px;} */
+	40%{margin-left: -1600px;}
+	57%{margin-left: -1600px;}
+	/* 60%{margin-left: -2400px;}
+	77%{margin-left: -2400px;}
+	80%{margin-left: -3200px;}
+	100%{margin-left: -3200px;} */
+}
+
+@-webkit-keyframes slide{
+	0%{margin-left: 0px;}
+	17%{margin-left: 0px;}
+	/* 20%{margin-left: -800px;}
+	37%{margin-left: -800px;} */
+	40%{margin-left: -1600px;}
+	57%{margin-left: -1600px;}
+	/* 60%{margin-left: -2400px;}
+	77%{margin-left: -2400px;}
+	80%{margin-left: -3200px;}
+	100%{margin-left: -3200px;} */
+}
+
+@-o-keyframes slide{
+	0%{margin-left: 0px;}
+	17%{margin-left: 0px;}
+	/* 20%{margin-left: -800px;}
+	37%{margin-left: -800px;} */
+	40%{margin-left: -1600px;}
+	57%{margin-left: -1600px;}
+	/* 60%{margin-left: -2400px;}
+	77%{margin-left: -2400px;}
+	80%{margin-left: -3200px;}
+	100%{margin-left: -3200px;} */
+}
+
+@media(min-width: 600px){
+  #sliderImages {
+    width : 4000px;
+    height: 200px;
+
+  }
+}
+
+@media(min-width: 800px){
+  
+}
+
+@media(min-width: 900px){
+  
+}
