--- a/views/partials/slider.hbs
+++ b/views/partials/slider.hbs
@@ -1,12 +1,12 @@
- {{#each carousel }}
-<div class="slider-holder">
-  <span id="slider-image-1"></span>
-  <div class="image-holder"> 
-    <img src={{this.sliderImg}} class="slider-image" />
-  {{!-- <background-image: url({{this.sliderImg}}) class="slider-image"> --}}
+ {{!-- {{#each carousel }} --}}
+<div id="cssSlider">
+    <div id="sliderImages">
+      <img id="si_1" src="/img/sliders/slider01.jpg" alt="" />
+      <img id="si_2" src="/img/sliders/slider02.jpg" alt="" />
+      <img id="si_3" src="/img/sliders/slider03.jpg" alt="" />
+      <img id="si_4" src="/img/sliders/slider04.jpg" alt="" />
+      <img id="si_5" src="/img/sliders/slider05.jpg" alt="" />
+      <div style="clear:left;"></div>
+    </div>
   </div>
-  <div class="button-holder">
-    <a href="#slider-image-1" class="slider-change"></a>
-  </div>
-</div>
-  {{/each}}
+  {{!-- {{/each}} --}}
