--- a/public/css/signup-login.css
+++ b/public/css/signup-login.css
@@ -20,12 +20,12 @@
 }
 
 
-
 .login p, .sign-up p {
   margin: 0.5rem;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  color: var(--dark);
 
 }
 
@@ -104,6 +104,10 @@ input[type=text], input[type=password] {
   border-radius: 16px;
   outline: 0;
  
+}
+
+.errors{
+  color: var(--dark);
 }
 
 /* MEDIA QUERIES */
