--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -11,9 +11,9 @@
       <li><a href="#"><img src="img/apple-white.png"><strong>iOS App</strong></a></li>
     </ul>
     <ul class="social-media">
-      <li><a href="#"><img src="img/facebook-white.png"></a></li>
-      <li><a href="#"><img src="img/instagram-white.png"></a></li>
-      <li><a href="#"><img src="img/twitter-white.png"></a></li>
+      <li><a href="#" title="Facebook"><img src="img/facebook-white.png"></a></li>
+      <li><a href="#" title="Instagram"><img src="img/instagram-white.png"></a></li>
+      <li><a href="#" title="Twitter"><img src="img/twitter-white.png"></a></li>
     </ul>
     <p class="copyright">&copy 2020, Dark Airbnb</p>
   </footer>
