--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,12 +1,11 @@
-{{#each messages}}
-    <div class="errors">{{this}}</div>
-{{/each}}
+
 <div class="sign-up">
   <form method="POST" action="/signup">
-    <p><input type="text" name="email" value="" placeholder="Email address"></p>
-    <p><input type="text" name="fistName" value="" placeholder="First name"></p>
-    <p><input type="text" name="lastName" value="" placeholder="Last name"></p>
-    <p><input type="password" name="password" value="" placeholder="Create a password"></p>
+    <p><input type="text" name="email" value="" placeholder="Email address">*</p>
+    <p><input type="text" name="phoneNumber" value="" placeholder="Phone number">*</p>
+    <p><input type="text" name="fistName" value="" placeholder="First name">*</p>
+    <p><input type="text" name="lastName" value="" placeholder="Last name">&nbsp</p>
+    <p><input type="password" name="password" value="" placeholder="Create a password">*</p>
     <p class="dont_want_receive">
       <label>
         <input type="checkbox" name="dont_want_receive" id="dont_want_receive">
@@ -15,6 +14,9 @@
     </p>
     <p class="submit"><input type="submit" name="signup" value="Sign up"></p>
   </form>
+{{#each messages}}
+<div class="errors">{{this}}</div>
+{{/each}}
 </div>
 {{!-- <div class="login-help">
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
