Separated fakeDB into model folder

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -14,7 +14,7 @@
   <nav class="header-nav">
     <ul class="menu-list">
       <li><a href="/" >Home</a></li>
-      <li><a href="/roomlisting" >Room Listing</a></li>
+      <li><a href="/rooms" >Room Listing</a></li>
       <li><a href="/signup" >User Registration</a></li>
     </ul>
   </nav>
