--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,3 @@
-
 <div class="sign-up">
   <form method="POST" action="/signup">
     <p><input type="text" name="email" value="" placeholder="Email address">*</p>
@@ -6,6 +5,12 @@
     <p><input type="text" name="fistName" value="" placeholder="First name">*</p>
     <p><input type="text" name="lastName" value="" placeholder="Last name">&nbsp</p>
     <p><input type="password" name="password" value="" placeholder="Create a password">*</p>
+    <p class="tos-privacy">
+      <label>
+        <input type="checkbox" name="tos-privacy" id="tos-privacy" required>
+        I agree the <a href="#">Dark Airbnb's Terms of Service</a>, <a href="#">Payments Terms of Service </a>, <a href="#">Privacy Policy</a>, and <a href="#">Non discrimination Policy</a>.
+      </label>
+    </p>
     <p class="dont_want_receive">
       <label>
         <input type="checkbox" name="dont_want_receive" id="dont_want_receive">
@@ -17,6 +22,7 @@
 {{#each messages}}
 <div class="errors">{{this}}</div>
 {{/each}}
+
 </div>
 {{!-- <div class="login-help">
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
