--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,6 +62,7 @@ h3{
 .wrapper{
   display: grid;
   padding: 0 0.5rem;
+
 }
 
 /* NAVIGATION */
@@ -93,7 +94,6 @@ h3{
 }
 
 .slider{
-
   width: 100%;
   text-align: center;
   /* margin: 0.5rem; */
@@ -113,131 +113,34 @@ h3{
 
 }
 
-.header-nav, .add-product a:hover{
-  /* background: var(--dark); */
-  /* color: var(--light); */
-}
-
-.menu-list{
-  justify-content: space-around;
-}
-
-
 
 /* MAIN LEFT */
 .main-section{
-
 width: auto;
 padding: 0.5rem;
 
-
-}
-
-.filters{
-
-
-
 }
 
 
-
-/* .star{
-background-color: #fff;
-display: inline;
-width: 38%;
-
-
-} */
-
-/* MAIN RIGHT */
-.mid-section{
+.user-reg-info {
+  /* position: relative; */
+  margin: 0.25rem auto;
   padding: 0.5rem;
   width: 100%;
 
-}
-
-.sort-order{
-  text-align: left;
-
-}
-
-.products{
-  display: grid;
-
-}
-
-.product{
-  text-align: center;
-  box-shadow: var(--shadow);
-  border-radius: 0.5em;
-  border: solid 1.5px;
-  margin: 0.25rem;
-  padding: 0.5rem 0;
-
-}
-
-.product-img{
-  padding: 0.25rem;
-}
-
-.product-info{
-  text-align: center;
-  background-color:var(--light) ;
-  border: solid 1px;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin: 0 ;
-
-}
-
-.add-product{
-  background: var(--primary);
-  margin: 0.5rem 0;
-  /* color: var(--dark); */
-  font-size: 0.5rem;
-  box-shadow: var(--shadow);
-  background-size: cover; 
-  background-position: center; 
-  display: inline-block; 
-  border: none; 
-  padding: 10px; 
-  width: 35px; 
-  border-radius: 450px; 
-  height: 35px; 
-  transition: all 0.5s; 
-  cursor: pointer;
-
-}
-
-.add-product:hover{ 
-  width: 37.5px; height: 37.5px;
-
-}
-
-.course.soldout {
-  box-shadow: none;
-  background-color: var(--light);
-  color: #999;
-
-}
-
-.rating-list img{
-  width: 50%;
-  height: 50%;
-  padding: 0.25rem;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 0 40px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 40px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
   
 }
 
-.product-rating-img{
-  width: 40%;
-  height: 40%;
-
-}
-
-.pagenumbers{
+.user-reg-info h3{
+  margin: 0.5rem;
+  color: var(--light);
   text-align: center;
 
 }
+
 
 /* FOOTER */
 .footer{
@@ -292,7 +195,6 @@ width: 38%;
 
 
 /* Banner runs on startup */
-
 /* #mask {
   position:absolute;
   left:0;
@@ -370,9 +272,14 @@ width: 38%;
     grid-template-columns: repeat(3, 1fr);
 
   }
+
+  /* .user-reg-info {
+    display: block;
+    width: 70%;  
+   
+   
+  } */
   
-
-
   /* FOOTER */
   .mobile-apps, .social-media{
     display: flex;
@@ -396,9 +303,13 @@ width: 38%;
     
   }
 
+  /* .user-reg-info {
+    width: auto; 
+    margin: 2rem 0;
+    margin-top: 0;
+    margin-bottom: 0.25rem;
  
-  /* .products{
-    grid-template-columns: repeat(3, 1fr);
+    
   } */
 
   .mobile-apps img, .social-media img{
