--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,23 +2,26 @@
    {{!-- <div class="promo-section">
      {{>promo}}
   </div> --}}
-   <div class="main-section">
-      {{>promo}}
-      {{>book}}
-   </div>
-   
-   {{!-- <p>Places to stay around Canada</p> --}}
-   {{!-- {{>promorooms}} --}}
-   <div class="room" id="promo">
-      {{#each indexRooms }}
-      <ul class="room-info zoom">
-         <li><img src={{this.roomImg}}></li>
-         <li class="top-room-info">
-            <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
-         </li>
-         <li><label>{{this.description}}</label></li>
-         <li><label>${{this.price}} CAD / night</label></li>
-      </ul>
-      {{/each}}
-   </div>
+
+<div class="main-section">
+   {{>user-info}}
+   {{>promo}}
+   {{>book}}
+</div>
+{{>promo-rooms}}
+
+{{!-- <p>Places to stay around Canada</p> --}}
+
+{{!-- <div class="room" id="promo">
+   {{#each rooms }}
+   <ul class="room-info zoom">
+      <li><img src={{this.roomImg}}></li>
+      <li class="top-room-info">
+         <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
+      </li>
+      <li><label>{{this.description}}</label></li>
+      <li><label>${{this.price}} CAD / night</label></li>
+   </ul>
+   {{/each}}
+</div> --}}
 </main>
