--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
       <li>Dark Airbnb</li>
       <li><a href="#">Careers</a></li>
       <li><a href="#">Policies</a></li>
-      <li><a href="#">Help</a></li>
+      <li><a href="/contact-us">Contact Us</a></li>
     </ul>
     <ul class="mobile-apps">
       <li><a href="#"><img src="img/android-white.png"><strong>Android App</strong></a></li>
