--- a/public/css/signup-login.css
+++ b/public/css/signup-login.css
@@ -1,4 +1,4 @@
-.login, .sign-up {
+.login, .sign-up, .contact-us {
   margin: 0.5rem auto;
   padding: 0.5rem;
   width: 100%;
@@ -9,24 +9,38 @@
   
 }
 
-.login h1, .sign-up h1 {
+.login h1, .sign-up h1, .contact-us h1 {
   margin: 0.5rem;
   font-size: 1rem;
   font-weight: bold;
   color: #555;
-  text-align: center;
   text-shadow: 0 1px var(--light);
+}
 
+.login h1, .sign-up h1{
+  text-align: center;
+}
+
+.contact-us h1{
+  text-align: left;
 }
 
 
-.login p, .sign-up p{
+.login p, .sign-up p, .contact-us p{
   margin: 0.5rem;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   text-align: center;
   color: var(--dark);
 
+}
+
+.login p, .sign-up p{
+  text-align: center;
+}
+
+.contact-us p{
+  text-align: left;
 }
 
 .sign-up p.tos-privacy a{
@@ -35,13 +49,29 @@
 }
 
 
-.login input[type=text], .login input[type=password],.sign-up input[type=text], .sign-up input[type=password] {
+.login input[type=text], .login input[type=password], .sign-up input[type=text], .sign-up input[type=password]{
   width: 100%;
   max-width: 80%;
   margin-left: auto;
   margin-right: auto;
 
+  margin: 0.25rem 0;
+  padding: 0.5rem;
+  /* width: 100%;
+  height: 100%;
+  background: var(--light); */
+  border: 1px solid;
+  border-color: #c4c4c4 #d1d1d1 #d4d4d4;
+  border-radius: 2px;
+
 }
+
+
+.contact-us textarea {
+  width: 100%;
+
+}
+
 
 .login p.remember_me, .sign-up p.dont_want_receive, .sign-up p.tos-privacy{
   text-align: left;
@@ -54,10 +84,18 @@
   cursor: pointer;
 }
 
-.login p.submit, .sign-up p.submit {
-  text-align: right;
+.login p.submit, .sign-up p.submit, .contact-us p.submit {
   margin: 0.5rem;
 
+}
+
+.login p.submit, .sign-up p.submit{
+  text-align: right;
+
+}
+
+.contactus p.submit{
+  text-align: left;
 }
 
 .login-help, .sign-up-help {
@@ -87,7 +125,7 @@
   font-size: 13px;
 }
 
-input[type=text], input[type=password] {
+/* input[type=text], input[type=password] {
   margin: 0.25rem 0;
   padding: 0.5rem;
   width: 100%;
@@ -97,9 +135,9 @@ input[type=text], input[type=password] {
   border-color: #c4c4c4 #d1d1d1 #d4d4d4;
   border-radius: 2px;
 
-}
+} */
 
-.login input[type=submit], .sign-up input[type=submit] {
+.login input[type=submit], .sign-up input[type=submit], .contact-us input[type=submit] {
   padding: 0 18px;
   height: 29px;
   font-weight: bold;
@@ -119,14 +157,14 @@ input[type=text], input[type=password] {
 
 /* MEDIA QUERIES */
 @media(min-width: 600px){
-  .login, .sign-up{
+  .login, .sign-up, .contact-us{
     width: 80%;  
     margin: 1rem auto;
   }
 }
 
 @media(min-width: 800px){
-  .login, .sign-up{
+  .login, .sign-up, .contact-us{
     width: 60%; 
     margin: 2rem auto;
   }
