--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -2,7 +2,7 @@
   <form method="POST" action="/signup">
     <p><input type="text" name="email" value="" placeholder="Email address">*</p>
     <p><input type="text" name="phoneNumber" value="" placeholder="Phone number">*</p>
-    <p><input type="text" name="fistName" value="" placeholder="First name">*</p>
+    <p><input type="text" name="firstName" value="" placeholder="First name">*</p>
     <p><input type="text" name="lastName" value="" placeholder="Last name">&nbsp</p>
     <p><input type="password" name="password" value="" placeholder="Create a password">*</p>
     <p class="tos-privacy">
