separated routes to controller

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -168,10 +168,10 @@ padding: 0.5rem;
 
 }
 
-.mobile-apps a{
-  /* color: var(--dark); */
+/* .mobile-apps a{
+  color: var(--dark);
 
-}
+} */
 
 .cs{
   text-align: left;
