--- a/views/partials/verified-user.hbs
+++ b/views/partials/verified-user.hbs
@@ -1,10 +1,10 @@
-<div class="user-reg-info">
+<div class="verified-user">
 
-{{!-- {{verivyContent}} --}}
+{{replyMsg}}
 
 
-<h3>We sent an sent email to {{userReg.email}} and SMS to {{userReg.phoneNumber}}. To continue, please check your email and verify your account. Didn't receive email?"</h3>
-<h3><a href="#">Resend Email</a></h3><br>
+{{!-- <h3>We sent an sent email to {{userReg.email}} and SMS to {{userReg.phoneNumber}}. To continue, please check your email and verify your account. Didn't receive email?</h3> --}}
+{{!-- <h3><a href="#">Resend Email</a></h3><br> --}}
 
 {{!-- {{#each userReg}}
 {{this}}
