--- a/views/general/contactus.hbs
+++ b/views/general/contactus.hbs
@@ -1,18 +1,19 @@
 <div class="contact-us">
-<h1>CONTACT US</h1>
-<p>We'd love to hear from you, please drop us a line if you've any query</p>
-<form action="/contact-us" method="POST">
-    <p><label for="fullname">Full Name *</label></p>
-    <p><input type="text" id="fullname"></p>
-    <p><label for="email">E-mail *</label></p>
-    <p><input type="text" id="email"></p>
-    <p><label for="message">Message *</label></p>
-    <p><textarea name="message" id="message" rows="5"></textarea></p>
-    {{!-- <input type="button" value="Submit"> --}}
-    <p class="submit"><input type="submit" name="submit" value="Submit"></p>
+    {{#each messages}}
+    <div class="errors">{{this}}</div>
+    {{/each}}
+    <h1>{{headingInfo}}</h1>
+    <p>We'd love to hear from you, please drop us a line if you've any query</p>
+    <form action="/contact-us" method="POST">
+        <p><label for="fullname">Full Name *</label></p>
+        <p><input type="text" id="fullname" name="fullName"></p>
+        <p><label for="email">E-mail *</label></p>
+        <p><input type="text" id="email" name="email"></p>
+        <p><label for="message">Message *</label></p>
+        <p><textarea name="message" id="message" rows="5"></textarea></p>
+        {{!-- <input type="button" value="Submit"> --}}
+        <p class="submit"><input type="submit" name="submit" value="Submit"></p>
 
-</form>
-{{#each messages}}
-<div class="errors">{{this}}</div>
-{{/each}}
+    </form>
+
 </div>
