ready to deploy to Heroku

--- a/views/general/index.hbs
+++ b/views/general/index.hbs
@@ -4,8 +4,8 @@
   </div> --}}
 
 <div class="main-section">
-   {{>verified-user}}
-   {{!-- {{>contactus-response}} --}}
+   {{!-- {{>verified-user}} --}}
+   {{>contactus-response}}
    {{>promo}}
    {{>book}}
 </div>
