--- a/views/partials/promo-rooms.hbs
+++ b/views/partials/promo-rooms.hbs
@@ -21,6 +21,7 @@
       </li>
       <li><label>{{this.description}}</label></li>
       <li><label>${{this.price}} CAD / night</label></li>
+      <li><img src={{this.promoImg}} class="star-img"></li>
    </ul>
    {{/each}}
 </div>
