--- a/views/partials/promo.hbs
+++ b/views/partials/promo.hbs
@@ -2,7 +2,7 @@
   <h2>SAVE AN EXTRA</h2>
   <h1>10%</h1>
   <h3>ON SELECT ROOMS</h3>
-  <form method="GET" action="/rooms">
+  <form method="GET" action="/">
     <p class="submit"><input type="submit" name="commit" value="VIEW TODAY'S DEALS"></p>
   </form>
 </div>
