user model added. User signup & pushed to db

--- a/views/general/adminLogin.hbs
+++ b/views/general/adminLogin.hbs
@@ -3,7 +3,7 @@
   <div class="errors">{{this}}</div>
   {{/each}}
   <h1>{{headingInfo}}</h1>
-  <form method="POST" action="/user/login">
+  <form method="POST" action="/admin/dashboard">
     <p><input type="text" name="email" value="" placeholder="Email address"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
@@ -17,7 +17,4 @@
 </div>
 <div class="login-help">
   <p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
-</div>
-<div class="sign-up-help">
-  <p>Don’t have an account? <a href="/signup">Sign up</a></p>
 </div>
