--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -7,13 +7,13 @@
       <li><a href="/contact-us">Contact Us</a></li>
     </ul>
     <ul class="mobile-apps">
-      <li><a href="#"><img src="img/android-white.png"><strong>Android App</strong></a></li>
-      <li><a href="#"><img src="img/apple-white.png"><strong>iOS App</strong></a></li>
+      <li><a href="#"><img src="/public/img/android-white.png"><strong>Android App</strong></a></li>
+      <li><a href="#"><img src="/public/img/apple-white.png"><strong>iOS App</strong></a></li>
     </ul>
     <ul class="social-media">
-      <li><a href="#" title="Facebook"><img src="img/facebook-white.png"></a></li>
-      <li><a href="#" title="Instagram"><img src="img/instagram-white.png"></a></li>
-      <li><a href="#" title="Twitter"><img src="img/twitter-white.png"></a></li>
+      <li><a href="#" title="Facebook"><img src="/public/img/facebook-white.png"></a></li>
+      <li><a href="#" title="Instagram"><img src="/public/img/instagram-white.png"></a></li>
+      <li><a href="#" title="Twitter"><img src="/public/img/twitter-white.png"></a></li>
     </ul>
     <p class="copyright">&copy 2020, Dark Airbnb</p>
   </footer>
