--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,12 +9,12 @@
   <!-- Material design icons are use below. Remove this line if using other font packs or images. Details on Material Design icons can be found here: https://material.io/resources/icons/ -->
   <!-- <script src="https://kit.fontawesome.com/91d2257466.js" crossorigin="anonymous"></script> -->
   <!-- You may change this "Reset" to "Normalize" if preferred -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/slider.css">
-  <link rel="stylesheet" href="css/signup-login-contactus-re.css">
-  <link rel="stylesheet" href="css/promo.css">
-  <link rel="stylesheet" href="css/book.css">
-  <link rel="stylesheet" href="css/room.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/public/css/reset.css">
+  <link rel="stylesheet" href="/public/css/slider.css">
+  <link rel="stylesheet" href="/public/css/signup-login-contactus-re.css">
+  <link rel="stylesheet" href="/public/css/promo.css">
+  <link rel="stylesheet" href="/public/css/book.css">
+  <link rel="stylesheet" href="/public/css/room.css">
+  <link rel="stylesheet" href="/public/css/index.css">
  
 </head>
