--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,12 +1,12 @@
 <!-- NAVIGATION -->
 <header>
   <ul class="header-logo" >
-    <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="img/DarkAirbnbLogo.png" alt=""></a></li>
+    <li class="logo"><a href="/" title="Dark Airbnb Logo"><img src="/public/img/DarkAirbnbLogo.png" alt=""></a></li>
     <li class="slider">{{>slider}}</li>
     {{!-- <div style="background-image: url(/img/sliders/slider01.jpg)"></div> --}}
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
-    <li class="signin"><a href="/signup" title="Sign Up"><img src="img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
+    <li class="signin"><a href="/user/signup" title="Sign Up"><img src="/public/img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
     </li>
     {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
   </ul>
