--- a/views/partials/slider.hbs
+++ b/views/partials/slider.hbs
@@ -1,11 +1,11 @@
  {{!-- {{#each carousel }} --}}
 <div id="cssSlider">
     <div id="sliderImages">
-      <img id="si_1" src="/img/sliders/slider01.jpg" alt="" />
-      <img id="si_2" src="/img/sliders/slider02.jpg" alt="" />
-      <img id="si_3" src="/img/sliders/slider03.jpg" alt="" />
-      <img id="si_4" src="/img/sliders/slider04.jpg" alt="" />
-      <img id="si_5" src="/img/sliders/slider05.jpg" alt="" />
+      <img id="si_1" src="/public/img/sliders/slider01.jpg" alt="" />
+      <img id="si_2" src="/public/img/sliders/slider02.jpg" alt="" />
+      <img id="si_3" src="/public/img/sliders/slider03.jpg" alt="" />
+      <img id="si_4" src="/public/img/sliders/slider04.jpg" alt="" />
+      <img id="si_5" src="/public/img/sliders/slider05.jpg" alt="" />
       <div style="clear:left;"></div>
     </div>
   </div>
