--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -15,7 +15,7 @@
     <ul class="menu-list">
       <li><a href="/">Home</a></li>
       <li><a href="/rooms">Room Listing</a></li>
-      <li><a href="/signup">User Registration</a></li>
+      <li><a href="/user/signup">User Registration</a></li>
     </ul>
   </nav>
 
