Authentication & user CRU are implemented

--- a/views/general/adminDashboard.hbs
+++ b/views/general/adminDashboard.hbs
@@ -4,7 +4,7 @@
   <ul>
     <li><label>Full name</label>  </li>
     <li><label>Email address</label> </li>
-  
+    <li><a href="/admin/logout">Logout </a></li>
 
   </ul>
 
