--- a/views/general/userDashboard.hbs
+++ b/views/general/userDashboard.hbs
@@ -1,16 +1,23 @@
+{{#each messages}}
+  <div class="errors">{{this}}</div>
+{{/each}}
+
 <div>
   <h1>{{headingInfo}}</h1>
-  <form method="POST" action="/user/edit">
   <ul>
-    <li><img src="/img/users/{{profilePic}}"> </li>
-    <li><label>Legal name</label>  </li>
-    <li><label>Gender</label> {{gender}}</li>
-    <li><label>Date of birth</label> {{dob}}</li>
-    <li><label>Email address</label> {{email}}</li>
-    <li><label>Phone number</label> {{phone}}</li>
-    <li><label>Government ID</label> {{govid}}</li>
-    <li><label>Address</label> {{address}}</li>
+    <li><a href="/user/edit">Edit </a></li>
+    <li><a href="/user/logout">Logout </a></li>
   </ul>
-   <input type="submit" value="Edit">
-  </form>
+
+  <ul>
+    <li><img src="/img/users/{{user.profilePic}}"> </li>
+    <li><label>Legal name</label>  {{user.firstName}}</li>
+    <li><label>Gender</label> {{user.gender}}</li>
+    <li><label>Date of birth</label> {{user.dateOfBirth}}</li>
+    <li><label>Email address</label> {{user.email}}</li>
+    <li><label>Phone number</label> {{user.phoneNumber}}</li>
+    <li><label>Government ID</label> {{user.governmentId}}</li>
+    <li><label>Address</label> {{user.address}}</li>
+  </ul>
+
 </div>
