--- a/views/general/editUser.hbs
+++ b/views/general/editUser.hbs
@@ -1,22 +1,25 @@
 <div>
   <h1>{{headingInfo}}</h1>
-  <form method="POST" action="/user/edit">
+  <li><a href="/user/logout">Logout </a></li>
+  <form method="POST" action="/user/update/{{user._id}}?method=PUT">
   <ul>
-    <li><img src="/img/users/{{profilePic}}"> </li>
+    <li><img src="/public/img/users/{{user.profilePic}}"> </li>
     <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
-    <li><label>First name</label>  <input type="text" name="firstName" id="firstName">{{firstName}}</li>
-    <li><label>Last name</label>  <input type="text" name="lastName" id="lastName">{{lastName}}</li>
+    <li><label>First name</label>  <input type="text" name="firstName" id="firstName" value="{{user.firstName}}"></li>
+    <li><label>Last name</label>  <input type="text" name="lastName" id="lastName" value="{{user.lastName}}"></li>
     <li><label>Gender</label> 
         <select name="gender">
-            <option value="male">Male</option>
+            {{!-- <option value="male" {{#if_eq}} selected {{/if}}>Male</option>
+            <option value="female" {{#if_eq}} selected {{/if}}>Female</option> --}}
+            <option value="male" >Male</option>
             <option value="female">Female</option>
-        </select>
+        </select>{{user.gender}}
     </li>
-    <li><label>Date of birth</label> <input type="date" name="dob" id="dob" value="{{dob}}">{{dob}} </li>
-    <li><label>Email address</label> <input type="text" name="email" id="email">{{email}}</li>
-    <li><label>Phone number</label> <input type="text" name="phone" id="phone">{{phone}}</li>
-    <li><label>Government ID</label> <input type="text" name="govid" id="govid">{{govid}}</li>
-    <li><label>Address</label ><input type="text" name="address" id="address">{{address}}</li>
+    <li><label>Date of birth</label> <input type="date" name="dateOfBirth" id="dateOfBirth" value="{{user.dateOfBirth}}">{{user.dateOfBirth}} </li>
+    <li><label>Email address</label> <input type="text" name="email" id="email" value="{{user.email}}"></li>
+    <li><label>Phone number</label> <input type="text" name="phoneNumber" id="phoneNumber" value="{{user.phoneNumber}}"></li>
+    <li><label>Government ID</label> <input type="text" name="governmentId" id="governmentId" value="{{user.governmentId}}"></li>
+    <li><label>Address</label ><input type="text" name="address" id="address" value="{{user.address}}"></li>
   </ul>
    <input type="submit" value="Save">
    </form>
