user reg&login with session&bcrypt has implemented

--- a/views/general/adminDashboard.hbs
+++ b/views/general/adminDashboard.hbs
@@ -1,10 +1,19 @@
-
-
-  <h1>{{headingInfo}}</h1>
-  <ul>
-    <li><label>Full name</label>  </li>
-    <li><label>Email address</label> </li>
-    <li><a href="/admin/logout">Logout </a></li>
-
-  </ul>
+<div class="main-info">
+  <div class="sub-header">
+    <h1>{{headingInfo}}</h1>
+  </div>
+  <nav class="sub-nav">
+    <ul>
+      <li><a href="/rooms/add">Add Room</a></li>
+      <li><a href="/rooms/edit">Edit Room</a></li>
+      <li><a href="/admin/logout">Logout </a></li>
+    </ul>
+  </nav>
+  <div class="info">
+    <ul>
+      <li><label>Full name</label> </li>
+      <li><label>Email address</label> </li>
+    </ul>
+  </div>
+</div>
 
