--- a/views/general/adminLogin.hbs
+++ b/views/general/adminLogin.hbs
@@ -3,7 +3,7 @@
   <div class="errors">{{this}}</div>
   {{/each}}
   <h1>{{headingInfo}}</h1>
-  <form method="POST" action="/admin/dashboard">
+  <form method="POST" action="/admin/login">
     <p><input type="text" name="email" value="" placeholder="Email address"></p>
     <p><input type="password" name="password" value="" placeholder="Password"></p>
     <p class="remember_me">
