--- a/views/rooms/editRoom.hbs
+++ b/views/rooms/editRoom.hbs
@@ -1,27 +1,31 @@
-<div>
-  <h2>{{headingInfo}}</h2>
-    
-    <form method="POST" action="/room/edit">
-
-        <label>Title</label>
-        <input type="text" name="title" id="title"> <br><br>
-
-        <label>Description</label>
-        <textarea id="description" name="description"></textarea><br><br>
-        <label>Price</label>
-        <input type="text" name="price" id="price"> <br><br>
-        <label>Address</label>
-        <input type="text" name="address" id="address"> <br><br>
-
-        <label>Status</label>
-        <select name="status">
-            <option value="open">Available</option>
-            <option value="close">Not Available</option>
-        </select>
-        <br><br>
-        <label>File Upload</label>
-        <input type="file" name="profilePic" id="profilePic"> <br><br>
-        <input type="submit" value="Edit">
-
-    </form>
+<div class="main-info">
+    <div class="sub-header">
+        <h1>{{headingInfo}}</h1>
+    </div>
+    <nav class="sub-nav">
+        <ul>
+            <li><a href="/rooms/add">Add Room</a></li>
+            <li><a href="/admin/logout">Logout </a></li>
+        </ul>
+    </nav>
+    <div class="info">
+        <form method="POST" action="/room/edit">
+        <ul>
+            <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
+            <li><label>Title</label><input type="text" name="title" id="title"></li>
+            <li><label>Description</label><textarea id="description" name="description"></textarea></li>
+            <li><label>Price</label><input type="text" name="price" id="price"></li>
+            <li><label>Address</label><input type="text" name="address" id="address"></li>
+            <li><label>Status</label>
+            <select name="status">
+                <option value="open">Available</option>
+                <option value="close">Not Available</option>
+            </select>
+            </li>
+        </ul>
+        <div class="sub-footer">
+            <input type="submit" value="Edit">
+        </div>
+        </form>
+    </div>
 </div>
