admin reg&login with session&bcrypt has implementd

--- a/public/css/admin-user.css
+++ b/public/css/admin-user.css
@@ -78,6 +78,12 @@ min-width: 30%;
   
   }
 
+.info textarea{
+  width: 20rem;
+  height: 10rem;
+
+}
+
 .info input[type=date], .info select, .info input[type=file]{
   width: fit-content;
 }
