--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -14,7 +14,7 @@
   <nav class="header-nav">
     <ul class="menu-list">
       <li><a href="/">Home</a></li>
-      <li><a href="/rooms">Room Listing</a></li>
+      <li><a href="/room/list">Room Listing</a></li>
       <li><a href="/user/signup">User Registration</a></li>
     </ul>
   </nav>
