--- a/views/rooms/addRoom.hbs
+++ b/views/rooms/addRoom.hbs
@@ -1,21 +1,27 @@
+  {{#each messages}}
+  <div class="errors">{{replyMsg}}</div>
+  {{/each}}
 <div class="main-info">
     <div class="sub-header">
         <h1>{{headingInfo}}</h1>
     </div>
     <nav class="sub-nav">
         <ul>
-            <li><a href="/rooms/edit">Edit Room</a></li>
+            <li><a href="/room/edit">Edit Room</a></li>
             <li><a href="/admin/logout">Logout </a></li>
         </ul>
     </nav>
     <div class="info">
-        <form method="POST" action="/room/add">
+        <form method="POST" action="/room/add" enctype="multipart/form-data">
         <ul>
             <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
             <li><label>Title</label><input type="text" name="title" id="title"></li>
             <li><label>Description</label><textarea id="description" name="description"></textarea></li>
             <li><label>Price</label><input type="text" name="price" id="price"></li>
             <li><label>Address</label><input type="text" name="address" id="address"></li>
+            <li><label>City</label><input type="text" name="city" id="city"></li>
+            <li><label>Province</label><input type="text" name="province" id="province"></li>
+            <li><label>Country</label><input type="text" name="country" id="country"></li>
             <li><label>Status</label>
             <select name="status">
                 <option value="open">Available</option>
