--- a/views/rooms/editRoom.hbs
+++ b/views/rooms/editRoom.hbs
@@ -4,18 +4,21 @@
     </div>
     <nav class="sub-nav">
         <ul>
-            <li><a href="/rooms/add">Add Room</a></li>
+            <li><a href="/room/add">Add Room</a></li>
             <li><a href="/admin/logout">Logout </a></li>
         </ul>
     </nav>
     <div class="info">
-        <form method="POST" action="/room/edit">
+        <form method="POST" action="/room/update/{{room._id}}?method=PUT" enctype="multipart/form-data">
         <ul>
             <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
-            <li><label>Title</label><input type="text" name="title" id="title"></li>
-            <li><label>Description</label><textarea id="description" name="description"></textarea></li>
-            <li><label>Price</label><input type="text" name="price" id="price"></li>
-            <li><label>Address</label><input type="text" name="address" id="address"></li>
+            <li><label>Title</label><input type="text" name="title" id="title" value="{{room.title}}"></li>
+            <li><label>Description</label><textarea id="description" name="description" value="{{room.description}}"></textarea></li>
+            <li><label>Price</label><input type="text" name="price" id="price" value="{{room.price}}"></li>
+            <li><label>Address</label><input type="text" name="address" id="address" value="{{room.address}}"></li>
+            <li><label>City</label><input type="text" name="city" id="city" value="{{room.city}}"></li>
+            <li><label>Province</label><input type="text" name="province" id="province" value="{{room.province}}"></li>
+            <li><label>Country</label><input type="text" name="country" id="country" value="{{room.country}}"></li>
             <li><label>Status</label>
             <select name="status">
                 <option value="open">Available</option>
