room:add-edit-delete has implemented

--- a/views/general/adminDashboard.hbs
+++ b/views/general/adminDashboard.hbs
@@ -4,8 +4,9 @@
   </div>
   <nav class="sub-nav">
     <ul>
-      <li><a href="/room/add">Add Room</a></li>
-      <li><a href="/room/edit">Edit Room</a></li>
+      <li><a href="/admin/room/add">Add Room</a></li>
+      {{!-- <li><a href="/room/edit">Edit Room</a></li> --}}
+       <li><a href="/admin/room/list">List Room</a></li>
       <li><a href="/admin/logout">Logout </a></li>
     </ul>
   </nav>
