--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -6,7 +6,7 @@
     {{!-- <div style="background-image: url(/img/sliders/slider01.jpg)"></div> --}}
     {{!-- <li>English</li>
     <li>$CAD</li> --}}
-    <li class="signin"><a href="/user/signup" title="Sign Up"><img src="/public/img/user-white.png" alt=""><strong class="signin-lbl">Sign Up</strong></a>
+    <li class="signin"><a href="/user/login" title="Login"><img src="/public/img/user-white.png" alt=""><strong class="signin-lbl">Login</strong></a>
     </li>
     {{!-- <li class="shopping-cart"><a href="#"><img src="img/Cart.png" alt=""><strong class="cart-lbl" id="cartQty"></strong></a></li> --}}
   </ul>
