--- a/public/css/room.css
+++ b/public/css/room.css
@@ -50,30 +50,61 @@ h3{
   
 }
 
-
-
-/* .product{
-  text-align: center;
-  box-shadow: var(--shadow);
-  border-radius: 0.5em;
-  border: solid 1.5px;
-  margin: 0.25rem;
-  padding: 0.5rem 0;
+.room-std{
+  display: grid;
+  padding: 0 0.5rem;
+  column-gap: 0.5rem;
+  border: solid 1px white;
+  margin: 1rem 0;
 
 }
 
-.product-img{
+.room-info-std{
+  margin: 0.5rem auto;
   padding: 0.25rem;
+  width: 100%;
+  background: var(--light);
+  border-radius: 1px;
+
+  color: var(--dark);
 }
 
-.product-info{
-  text-align: center;
+.top-room-info-std{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
   background-color:var(--light) ;
-  border: solid 1px;
-  border-radius: 0.5rem;
+
+}
+
+
+.star-img-std{
+  width: 100%;
+  max-width: 15%;
+  
+}
+
+.sub-footer-std ul{
+  display: flex;
+  padding: 1rem 0;
+
+}
+
+.sub-footer-std li{
+  padding:0 0.5rem 0 0.5rem;
+}
+
+.sub-footer-std a{
   padding: 0.5rem;
-  margin: 0 ;
-} */
+  border: solid 0.5px;
+  background-color: yellow;
+  color: var(--light);
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 0.25rem;
+
+}
 
 /* MEDIA QUERIES */
 @media(min-width: 600px){
