--- a/views/general/index.hbs
+++ b/views/general/index.hbs
@@ -14,16 +14,17 @@
 
 {{!-- <p>Places to stay around Canada</p> --}}
 
-{{!-- <div class="room" id="promo">
-   {{#each rooms }}
-   <ul class="room-info zoom">
-      <li><img src={{this.roomImg}}></li>
-      <li class="top-room-info">
-         <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
-      </li>
-      <li><label>{{this.description}}</label></li>
-      <li><label>${{this.price}} CAD / night</label></li>
-   </ul>
-   {{/each}}
-</div> --}}
+
+{{!-- {{<div class="room">
+{{#each data }}
+<ul class="room-info zoom">
+   <li><img src={{this.roomImg}}></li>
+   <li class="top-room-info">
+      <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
+   </li>
+   <li><label>{{this.description}}</label></li>
+   <li><label>${{this.price}} CAD / night</label></li>
+</ul>
+{{/each}}
+</div>}} --}}
 </main>
