--- a/views/rooms/addRoom.hbs
+++ b/views/rooms/addRoom.hbs
@@ -7,14 +7,14 @@
     </div>
     <nav class="sub-nav">
         <ul>
-            <li><a href="/room/edit">Edit Room</a></li>
+            <li><a href="/admin/room/list">List Room</a></li>
             <li><a href="/admin/logout">Logout </a></li>
         </ul>
     </nav>
     <div class="info">
-        <form method="POST" action="/room/add" enctype="multipart/form-data">
+        <form method="POST" action="/admin/room/add" enctype="multipart/form-data">
         <ul>
-            <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
+            <li><label>File Upload</label><input type="file" name="roomPic" id="roomPic"></li>
             <li><label>Title</label><input type="text" name="title" id="title"></li>
             <li><label>Description</label><textarea id="description" name="description"></textarea></li>
             <li><label>Price</label><input type="text" name="price" id="price"></li>
