--- a/views/rooms/editRoom.hbs
+++ b/views/rooms/editRoom.hbs
@@ -4,21 +4,21 @@
     </div>
     <nav class="sub-nav">
         <ul>
-            <li><a href="/room/add">Add Room</a></li>
+            <li><a href="/admin/room/add">Add Room</a></li>
             <li><a href="/admin/logout">Logout </a></li>
         </ul>
     </nav>
     <div class="info">
-        <form method="POST" action="/room/update/{{room._id}}?method=PUT" enctype="multipart/form-data">
+        <form method="POST" action="/admin/room/update/{{_id}}?method=PUT" enctype="multipart/form-data">
         <ul>
             <li><label>File Upload</label><input type="file" name="profilePic" id="profilePic"></li>
-            <li><label>Title</label><input type="text" name="title" id="title" value="{{room.title}}"></li>
-            <li><label>Description</label><textarea id="description" name="description" value="{{room.description}}"></textarea></li>
-            <li><label>Price</label><input type="text" name="price" id="price" value="{{room.price}}"></li>
-            <li><label>Address</label><input type="text" name="address" id="address" value="{{room.address}}"></li>
-            <li><label>City</label><input type="text" name="city" id="city" value="{{room.city}}"></li>
-            <li><label>Province</label><input type="text" name="province" id="province" value="{{room.province}}"></li>
-            <li><label>Country</label><input type="text" name="country" id="country" value="{{room.country}}"></li>
+            <li><label>Title</label><input type="text" name="title" id="title" value="{{title}}"></li>
+            <li><label>Description</label><textarea id="description" name="description">{{description}}</textarea></li>
+            <li><label>Price</label><input type="text" name="price" id="price" value="{{price}}"></li>
+            <li><label>Address</label><input type="text" name="address" id="address" value="{{address}}"></li>
+            <li><label>City</label><input type="text" name="city" id="city" value="{{city}}"></li>
+            <li><label>Province</label><input type="text" name="province" id="province" value="{{province}}"></li>
+            <li><label>Country</label><input type="text" name="country" id="country" value="{{country}}"></li>
             <li><label>Status</label>
             <select name="status">
                 <option value="open">Available</option>
@@ -27,7 +27,7 @@
             </li>
         </ul>
         <div class="sub-footer">
-            <input type="submit" value="Edit">
+            <input type="submit" value="Save">
         </div>
         </form>
     </div>
