Add+show picture with unique file name has fixed

--- a/views/general/editUser.hbs
+++ b/views/general/editUser.hbs
@@ -4,6 +4,7 @@
   </div>
   <div class="sub-nav">
     <ul>
+      <li><a href="/user/profile">Dashboard</a></li>
       <li><a href="/user/logout">Logout </a></li>
     </ul>
   </div>
