--- a/views/rooms/adminListRoom.hbs
+++ b/views/rooms/adminListRoom.hbs
@@ -5,6 +5,7 @@
   </div>
   <nav class="sub-nav">
     <ul>
+       <li><a href="/admin/dashboard">Dashboard</a></li>
       <li><a href="/admin/room/add">Add Room</a></li>
       <li><a href="/admin/logout">Logout </a></li>
     </ul>
@@ -14,7 +15,7 @@
     <ul class="room-info-std">
       <li><img src="/public/img/rooms/{{this.roomPic}}"></li>
       <li class="top-room-info-std">
-        <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img-std">
+        <h3>{{this.title}}</h3>
       </li>
       <li><label>{{this.description}}</label></li>
       <li><label>${{this.price}} CAD / night</label></li>
