--- a/views/rooms/addRoom.hbs
+++ b/views/rooms/addRoom.hbs
@@ -7,6 +7,7 @@
     </div>
     <nav class="sub-nav">
         <ul>
+            <li><a href="/admin/dashboard">Dashboard</a></li>
             <li><a href="/admin/room/list">List Room</a></li>
             <li><a href="/admin/logout">Logout </a></li>
         </ul>
