--- a/views/rooms/list.hbs
+++ b/views/rooms/list.hbs
@@ -1,13 +1,15 @@
 
 <div class="room">
 {{#each data }}
+<a href="/room/info/{{this.id}}">
 <ul class="room-info zoom">
-   <li><img src={{this.roomImg}}></li>
+   <li><img src="/public/img/rooms/{{this.roomPic}}"></li>
    <li class="top-room-info">
-      <h3>{{this.title}}</h3><img src={{this.starImg}} class="star-img">
+      <h3>{{this.title}}</h3>
    </li>
    <li><label>{{this.description}}</label></li>
    <li><label>${{this.price}} CAD / night</label></li>
 </ul>
+</a>
 {{/each}}
 </div>
